The news table.

--- a/local/news/templates/list.mustache
+++ b/local/news/templates/list.mustache
@@ -24,7 +24,7 @@
     }
 }}
 
-<table id="table_id" class="display">
+<table id="news_table" class="display">
   <thead>
     <tr>
       <th>Id</th>
@@ -41,7 +41,7 @@
       <td>{{title}}</td>
       <td>{{is_enabled}}</td>
       <td>{{timemodified}}</td>
-      <td><a href="{{link}}">edit</a></td>
+      <td><a href="{{link_edit}}">edit</a></td>
     </tr>
   {{/news}}
   </tbody>
