--- a/local/news/templates/list.mustache
+++ b/local/news/templates/list.mustache
@@ -41,7 +41,7 @@
       <td>{{title}}</td>
       <td>{{is_enabled}}</td>
       <td>{{timemodified}}</td>
-      <td><a href="{{link_edit}}">edit</a></td>
+      <td><a href="{{link_edit}}">edit</a>/<a href="{{link_delete}}">delete</a></td>
     </tr>
   {{/news}}
   </tbody>
